integration_tests/codegen_fail/fail/scalar/derive_multiple_named_fields_with_resolver.stderr
error: GraphQL scalar expected exactly 1 field, e.g., Test { test: i32 } or all custom resolvers
 --> fail/scalar/derive_multiple_named_fields_with_resolver.rs:4:1
  |
4 | / #[graphql(to_output_with = Self::to_output)]
5 | | struct Scalar {
6 | |     id: i32,
7 | |     another: i32,
8 | | }
  | |_^
